--- a/css/hall.css
+++ b/css/hall.css
@@ -7,7 +7,7 @@ body {
 }
 
 .header {
-    background-color: #333;
+    background-color: #017b56;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -32,7 +32,7 @@ h1 {
 
 .button {
     padding: 10px 20px;
-    background-color: #333;
+    background-color: #017b56;
     color: #fff;
     border: none;
     cursor: pointer;
