--- a/css/manageUser.css
+++ b/css/manageUser.css
@@ -97,3 +97,127 @@ table thead{
 table tbody{
     background-color: #f8f6f2b8;
 }
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup.hide {
+    display: none;
+}
+
+.popup-content {
+    display: flex;
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 800px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 50px;
+}
+
+.popup-image img{
+    flex: 1;
+    padding: 20px;
+    width: 100%;
+    height: auto;
+}
+
+.popup-details{
+    flex: 1;
+    padding: 20px;
+    position: relative;
+}
+
+.popup-details{
+    flex: 1;
+    padding: 20px;
+    position: relative;
+}
+
+.popup-details-background{
+    background-color: #FFF8EB;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+#popup-name{
+    text-align: center;
+    padding-bottom: 10px
+}
+
+.filter button {
+    padding: 1em 2.1em 1.1em;
+    border: radius 4px;
+    margin: 8px;
+    border: none;
+    background-color: #F5F0DD;
+    font-weight: 800;
+    font-size: 0.85em;
+    text-transform: uppercase;
+    text-align: center;
+    box-shadow: 0em -0.2em 0em white inset;
+    color: #1D5748;
+}
+
+.filter{
+    text-align: center;
+    margin: 10px 0;        
+}
+
+.button-value{
+    width: 15%;
+}
+
+.button-value.active {
+    background-color: #1D5748;
+    color: white;
+}
+
+.button-value:hover {
+    background-color: #1D5748;
+    color:white;
+}
+
+.pagination {
+    display: flex;
+    padding-bottom: 10px;
+}
+
+.pagination .btn {
+    margin: 0 5px;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: #1D5748;
+    border-radius: 5px;
+}
+
+.pagination .btn-secondary {
+    background-color: #F5F0DD;
+}
+
+.pagination .btn-primary {
+    background-color: #1D5748;
+    font-weight: bold;
+    color: #F5F0DD;
+    border-color: #1D5748
+}
