--- a/css/admin_viewfeedback.css
+++ b/css/admin_viewfeedback.css
@@ -1,6 +1,6 @@
 body {
 background-color: #f8f9fa;
-font-family: 'Poppins', Arial, sans-serif;
+font-family: Arial, Helvetica, sans-serif;
 color: #343a40;
 }
 
