--- a/css/replyFeedback.css
+++ b/css/replyFeedback.css
@@ -1,5 +1,5 @@
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             background-color: #f2f2f2;
             display: flex;
             justify-content: center;
