--- a/css/manageAmbulance.css
+++ b/css/manageAmbulance.css
@@ -19,7 +19,7 @@ body {
     max-width: 600px; /* Set a max-width for better readability */
     margin: auto;
     box-sizing: border-box;
-    background-color: #ffffff; /* White background for better contrast */
+    background-color: #F5F0DD;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Adds subtle shadow */
   }
   
@@ -44,7 +44,7 @@ body {
   }
   
   button[type="submit"] {
-    background-color: #41a072;
+    background-color: #1D5748;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -56,7 +56,7 @@ body {
   }
   
   button[type="submit"]:hover {
-    background-color: #3d9366;
+    background-color: #143D33;
   }
   
   .custom-select-wrapper {
