--- a/css/manageAmbulance.css
+++ b/css/manageAmbulance.css
@@ -16,11 +16,11 @@ body {
     padding: 20px;
     border-radius: 8px;
     width: 100%;
-    max-width: 600px; /* Set a max-width for better readability */
+    max-width: 600px; 
     margin: auto;
     box-sizing: border-box;
     background-color: #F5F0DD;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Adds subtle shadow */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
   }
   
   .form-group {
